--- a/css/common.css
+++ b/css/common.css
@@ -27,11 +27,19 @@ button {
   display: flex;
   padding: 10px;
   outline: 5px dashed pink;
+  list-style: none;
+}
+
+.gallery__item {
+  flex-basis: calc(100% / 3 - 20px);
+}
+
+.gallery__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .gallery__img {
-  width: calc(100% / 3 - 20px);
-}
-.gallery__img:not(:last-child) {
-  margin-right: 30px;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
